# pit-proto

./: .gitignore  AGENT_GUIDANCE_SUMMARY.md  AGENT_QUICKSTART.md  AGENT_TASKS.md  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE_PROCESS.md  SCHEMA_EVOLUTION.md  SECURITY.md  buf.gen.yaml  buf.yaml  go.mod
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workstream-task.md
.github/workflows/: buf-breaking.yaml  release.yaml  update-dependents.yml
ai/: README.md
ai/tasks/: 00-repo-bootstrap.md
docs/adr/: 0000-template.md
proto/pit/envelope/v1/: envelope.proto
proto/pit/events/v1/: events.proto
python/: pyproject.toml
rust-template/: Cargo.toml  README.md  lib.rs
