[package]
name = "pit-proto"
version = "0.0.0"
edition = "2021"

description = "Generated Rust protobuf types for the PIT Protocol (Perpetual Income Token) event schemas."
license = "Apache-2.0"
repository = "https://github.com/awesomelyradical/pit-proto"
homepage = "https://github.com/awesomelyradical/pit-proto"
readme = "README.md"
keywords = ["protobuf", "kafka", "trading", "defi"]
categories = ["encoding"]

rust-version = "1.74"

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
